--- a/enrolfingerprint.ui
+++ b/enrolfingerprint.ui
@@ -207,6 +207,9 @@ QWidget {background-color: rgb(255, 255, 255)}
      </item>
      <item row="5" column="2">
       <widget class="QPushButton" name="exitButton">
+       <property name="focusPolicy">
+        <enum>Qt::NoFocus</enum>
+       </property>
        <property name="text">
         <string>Exit</string>
        </property>
