--- a/about.ui
+++ b/about.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1174</width>
+    <width>1205</width>
     <height>638</height>
    </rect>
   </property>
@@ -56,7 +56,7 @@ QWidget {background-color: white}
         <string notr="true">font: 18pt &quot;Noto Sans&quot;;</string>
        </property>
        <property name="text">
-        <string>Developed by Arnav Dhamija, Yashdeep Thorat, Ebin Philip</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Developed by Ebin Philip, Arnav Dhamija, Yashdeep Thorat&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
      </item>
@@ -99,7 +99,7 @@ QWidget {background-color: white}
         <string notr="true">font: italic bold 18pt &quot;Noto Sans&quot;;</string>
        </property>
        <property name="text">
-        <string>v0.1.2a</string>
+        <string>v1.0</string>
        </property>
       </widget>
      </item>
@@ -118,6 +118,9 @@ QWidget {background-color: white}
      </item>
      <item row="8" column="1">
       <widget class="QPushButton" name="closeButton">
+       <property name="focusPolicy">
+        <enum>Qt::NoFocus</enum>
+       </property>
        <property name="text">
         <string>Close</string>
        </property>
