--- a/cart.ui
+++ b/cart.ui
@@ -88,6 +88,9 @@ QWidget {background-color: white}
        </item>
        <item row="9" column="0" colspan="2">
         <widget class="QPushButton" name="removeCartButton">
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
+         </property>
          <property name="text">
           <string>Remove From Cart</string>
          </property>
@@ -223,6 +226,9 @@ QWidget {background-color: white}
        </item>
        <item row="10" column="0" colspan="2">
         <widget class="QPushButton" name="openInventory">
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
+         </property>
          <property name="text">
           <string>Inventory</string>
          </property>
