--- a/editusers.ui
+++ b/editusers.ui
@@ -47,6 +47,9 @@ QWidget {background-color: white}
    </item>
    <item row="2" column="1" alignment="Qt::AlignHCenter">
     <widget class="QPushButton" name="saveButton">
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
      <property name="text">
       <string>Save Details</string>
      </property>
@@ -108,26 +111,16 @@ QWidget {background-color: white}
        </item>
        <item row="12" column="0">
         <widget class="QPushButton" name="biometricButton">
+         <property name="font">
+          <font>
+           <family>MS Shell Dlg 2</family>
+          </font>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
+         </property>
          <property name="text">
           <string>Biometrics</string>
-         </property>
-        </widget>
-       </item>
-       <item row="12" column="1">
-        <widget class="QPushButton" name="deleteButton">
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>35</height>
-          </size>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(170, 0, 0);
-font: 10pt &quot;Noto Sans&quot;;
-color: rgb(255, 255, 255);</string>
-         </property>
-         <property name="text">
-          <string>Remove User</string>
          </property>
         </widget>
        </item>
@@ -201,6 +194,13 @@ color: rgb(255, 255, 255);</string>
          </property>
          <property name="scaledContents">
           <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="12" column="1">
+        <widget class="QPushButton" name="deleteButton">
+         <property name="text">
+          <string>Delete</string>
          </property>
         </widget>
        </item>
