--- a/editusers.ui
+++ b/editusers.ui
@@ -199,6 +199,12 @@ QWidget {background-color: white}
        </item>
        <item row="12" column="1">
         <widget class="QPushButton" name="deleteButton">
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
+         </property>
+         <property name="autoFillBackground">
+          <bool>true</bool>
+         </property>
          <property name="text">
           <string>Delete</string>
          </property>
