--- a/inventory.ui
+++ b/inventory.ui
@@ -183,7 +183,11 @@ QWidget {background-color: white}
           <item>
            <widget class="QPushButton" name="pushButton_2">
             <property name="text">
-             <string>-</string>
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>images/minus.png</normaloff>images/minus.png</iconset>
             </property>
            </widget>
           </item>
@@ -208,7 +212,11 @@ QWidget {background-color: white}
           <item>
            <widget class="QPushButton" name="pushButton">
             <property name="text">
-             <string>+</string>
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>images/plus.png</normaloff>images/plus.png</iconset>
             </property>
            </widget>
           </item>
