--- a/inventory.ui
+++ b/inventory.ui
@@ -141,7 +141,7 @@ QWidget {background-color: white}
            </spacer>
           </item>
           <item>
-           <widget class="QPushButton" name="pushButton_2">
+           <widget class="QPushButton" name="minus">
             <property name="focusPolicy">
              <enum>Qt::NoFocus</enum>
             </property>
@@ -155,7 +155,7 @@ QWidget {background-color: white}
            </widget>
           </item>
           <item>
-           <widget class="QLabel" name="label_8">
+           <widget class="QLabel" name="quantity">
             <property name="font">
              <font>
               <pointsize>12</pointsize>
@@ -176,7 +176,7 @@ QWidget {background-color: white}
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="pushButton">
+           <widget class="QPushButton" name="plus">
             <property name="focusPolicy">
              <enum>Qt::NoFocus</enum>
             </property>
